# edukate-notifier/src/main/kotlin/io/github/sanyavertolet/edukate/notifier/dtos/NotificationPage.kt
@@ -1,0 +1,3 @@
+package io.github.sanyavertolet.edukate.notifier.dtos
+
+data class NotificationPage(val notifications: List<BaseNotificationDto>, val statistics: NotificationStatistics)
